Fixed various path issues